--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+.search {
+  padding-right: 37rem;
+}
+.login {
+  margin: 0.2rem;
+}
+.btn {
+  border-radius: 0px;
+}
+.card {
+  height: 550px;
+}
+.image {
+  height: 400px;
+}
